--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>se.mtm</groupId>
-    <artifactId>pef-validator</artifactId>
+    <artifactId>PEFCheck</artifactId>
     <version>0.0.1-SNAPSHOT</version>
 
     <properties>
@@ -52,7 +52,7 @@
                         <manifest>
                             <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                             <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
-                            <mainClass>se.mtm.PefValidator</mainClass>
+                            <mainClass>se.mtm.PEFCheck</mainClass>
                         </manifest>
                     </archive>
                     <descriptorRefs>
